# rust_machine_learning

./: Cargo.toml  data.json
lib/machlears/: Cargo.toml
lib/machlears/src/: lib.rs  prelude.rs
lib/machlears/src/models/: mod.rs
lib/machlears/src/models/active/: entity.rs
lib/machlears/src/models/active/methods/: predict.rs
lib/machlears/src/models/builder/: entity.rs
lib/machlears/src/models/builder/methods/: build.rs
lib/machlears/src/models/info/: entity.rs  mod.rs
lib/machlears/src/models/info/methods/: mod.rs  test_write.rs
lib/machlears/src/models/scaffold/: entity.rs
lib/machlears/src/models/scaffold/methods/: setup.rs
lib/machlears/src/models/scaffold/methods/setup/: db.rs  ds.rs  ps.rs
lib/machlears/src/models/trainer/: entity.rs
lib/machlears/src/models/trainer/methods/: db_use_best.rs  mod.rs  train.rs
src/: main.rs
