[package]
name = "machlears"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"


sqlx = { version = "0.7.2", features = [ "runtime-tokio", "tls-rustls", "sqlite", "mysql", "postgres", "any", "chrono", "json" ] }
url = "2.4.1"
csv= "1.3.0"
chrono = "0.4.31"